Improve plugin system, new types.
Both Java and Groovy plugins are now possible.
BlackLab looks for plugins in the plugins/ subdirectory
of its configuration directory.

ConvertPlugin and TagPlugin have been merged into
FileConverter, which supports both text and binary
conversions. Multiple can be specified in a .blf.yaml file.

Several new plugin types have been added: IndexSourceType
(finds documents to be indexed), InputFormatType (formerly
DocIndexer), ProcessingInstruction, QueryFunction,
QueryParserProvider and AuthMethodProvider. More may be
added in the future.

See site/docs/development/040_customization/index.md for
a full overview.

Squashed commit of the following:

commit 545c025aee78e1074795fdaf68b13778a6006bf4
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Tue Nov 4 13:14:30 2025 +0100

    Fix security hotspots (SonarCloud).

commit a0c25744b31ec480809dbc24180a32091ffcfdd0
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Wed Oct 29 14:14:33 2025 +0100

    Docs

commit 791a796ff5a72f30cf91720a4a8a363bc56d32dc
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Wed Oct 29 13:58:32 2025 +0100

    Docs.

commit 8180ec8064b7babfd021bfc2dfc485bdf251c9e9
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Wed Oct 29 13:11:53 2025 +0100

    AuthMethodProvider plugins.

commit ee00364afdba976ea0c38a12b97be25930c9b427
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Fri Oct 17 12:23:22 2025 +0200

    QueryParserProvider plugins work.

commit 2a6b25c7e746c0d4c57327d66bdbcc26231858eb
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Fri Oct 17 12:14:37 2025 +0200

    WIP QueryParserProvider plugin.

commit 5807fcee4e2913033e708a180700bfb5fb9040d4
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Fri Oct 17 10:44:40 2025 +0200

    Simplify instrumentation stuff a bit.

commit 6f75ac374205fdcad1caac0927a014c5f5deeb3a
Author: Jan Niestadt <jan.niestadt@ivdnt.org>
Date:   Thu Oct 16 15:59:54 2025 +0200

    Docs.

commit 9ad64cee6